[gd_scene load_steps=4 format=3 uid="uid://br22wmksbuen"]

[ext_resource type="Script" path="res://scripts/Door.gd" id="1_phvmf"]
[ext_resource type="AudioStream" uid="uid://d2nonbcnbufby" path="res://assets/music/door_open.ogg" id="2_vquus"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvu7c"]
size = Vector2(57, 134.5)

[node name="Door" type="Area2D"]
script = ExtResource("1_phvmf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nvu7c")
debug_color = Color(0.866667, 0.258824, 0.619608, 0.419608)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -112.0
offset_top = -64.0
offset_right = -21.0
offset_bottom = -38.0
text = "press space"

[node name="open" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vquus")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
